<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llVertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorFondo"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNombreAl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_nombreAl"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/llHorizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNotaExamen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_nota_examen"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tvNotaTareas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_nota_tareas"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tvNotaActitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_nota_actitud"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</LinearLayout>