<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlPrimerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    android:padding="@dimen/margen_layout"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/tv_bienvenida"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etAsignatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvBienvenida"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="104dp"
        android:ems="10"
        android:hint="@string/et_asig_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvBienvenida"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="23dp"
        android:onClick="clickConsultar"
        android:text="@string/btn_consultar"
        android:textSize="18sp" />
</RelativeLayout>